--- a/EmbededShell/EmbeddedbiShell/Views/Shared/_Layout.cshtml
+++ b/EmbededShell/EmbeddedbiShell/Views/Shared/_Layout.cshtml
@@ -1,5 +1,7 @@
 ﻿@using SampleCoreApp.Controllers;
 @using SampleCoreApp.Models;
+@using Microsoft.AspNetCore.Http;
+@inject IHttpContextAccessor HttpContextAccessor
 @{
     var globalAppSettings = ViewBag.GlobalAppSettings as GlobalAppSettings;
     var fixedSide = globalAppSettings.Sidebar.IsFixed ? "sidebar-mini layout-fixed" : globalAppSettings.Sidebar.IsEnabled ? "sidebar-mini sidebar-collapse" : "sidebar-collapse";
@@ -13,14 +15,16 @@
     var logoName = globalAppSettings.AppLogo;
     var environment = globalAppSettings.EmbedDetails.Environment;
     var serverUrl = globalAppSettings.EmbedDetails.Serverurl;
-    var embedEmail = globalAppSettings.EmbedDetails.Email;
+    var embedEmail = globalAppSettings.EmbedDetails.AdminEmail;
     var baseurl = globalAppSettings.EmbedDetails.BaseUrl;
     var logoPath = baseurl + "/images/application/" + logoName;
     var authorizeUrl = @Url.Action("GetDetails", "Home");
+    var changeIndexUrl = @Url.Action("ChangeSiteIndex", "Home");
+    var userDetails = globalAppSettings.EmbedDetails.UserDetails;
     var userDisplayName = ViewBag.UserDisplayName as string;
-    var displayName = string.IsNullOrWhiteSpace(userDisplayName) ? globalAppSettings.EmbedDetails.DisplayName : userDisplayName;
+    var displayName = string.IsNullOrWhiteSpace(userDisplayName) ? userDetails[0].DisplayName : userDisplayName;
     var height = string.Empty;
-    var userDetail = new UserDetail();
+
     var ddwnMenu = "dropdown";
     var ddwnIcon = "dropdown-toggle";
     if (globalAppSettings.Header.IsEnabled && globalAppSettings.Footer.IsEnabled)
@@ -35,12 +39,20 @@
     {
         height = "calc(100vh)";
     }
-    //ddwnMenu = "collapse";
-    //ddwnIcon = "";
 
-}
-@model SampleCoreApp.Models.SamplesTreeViewModel
+    if (userDetails != null && userDetails.Count > 1)
+    {
 
+    }
+    else
+    {
+        ddwnMenu = "collapse";
+        ddwnIcon = "";
+    }
+
+    }
+    @model SampleCoreApp.Models.SamplesTreeViewModel
+    
 <!DOCTYPE html>
 <html>
 <head>
@@ -67,7 +79,11 @@
 
     <link rel="stylesheet" href="~/css/themes/summernote-bs4.css">
 
-    <script src="~/js/jquery/jquery.js"></script>
+
+    <script src="~/js/jquery/jquery.min.js"></script>
+    <script src="~/js/jquery/jquery.easing.min.js"></script>
+    <script src="~/js/jquery/Jsrender.js"></script>
+    <script src="~/js/jquery/signalr.js"></script>
     <script src="~/js/jquery-ui/jquery-ui.js"></script>
     <script src="~/js/bootstrap/bootstrap.bundle.js"></script>
     <script src="~/js/jqvmap/jquery.vmap.js"></script>
@@ -76,15 +92,8 @@
     <script src="~/js/application/summernote-bs4.js"></script>
     <script src="~/js/application/jquery.overlayScrollbars.js"></script>
     <script src="~/js/application/adminlte.js"></script>
-    <script src="~/js/application/dashboard.js"></script>
     <script src="~/js/application/demo.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/1.0.0-beta/jsrender.js"></script>
-    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.1.2.min.js"></script>
-    @*<script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v3.2.16/embed-js.beta.min.js"></script>*@
-    @*<script type="text/javascript" src="~/js/EmbedBiWrapper.js"></script>*@
-    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/v3.3.40/embed-js.js"></script>
+    <script src="~/js/jquery/embed-js.js"></script>
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     @*<script type="text/javascript" src="~/js/ej2.web.all.min.js"></script>*@
@@ -127,7 +136,8 @@
                 </ul>*@
 
             <!-- SEARCH FORM -->
-            <form class="form-inline ml-3">
+            <form class="form-inline ml-3" action="/" method="post">
+                @Html.AntiForgeryToken()
                 <div class="input-group input-group-sm">
                     <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
                     <div class="input-group-append">
@@ -233,19 +243,19 @@
                         </div>
                         <div class="info ">
                             <a id="profile-name" href="#" data-toggle="@ddwnMenu" style="color:black" class="@ddwnIcon d-block">@displayName</a>
-                            @*<ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
-                                    <li class="dropdown-submenu ">
-                                        <a id="dropdownSubMenu2" tabindex="-1" href="#" class="dropdown-item user dropdown-toggle">Switch User</a>
-                                        <ul id="ddwnSubMenu" style="left:-162px" aria-labelledby="dropdownSubMenu2" class="dropdown-menu border-0 shadow">
-                                            @foreach (var user in userDetail.Users)
-                                            {
-                                                <li>
-                                                    <a onclick="switchUser('@user.Email', this)" class="dropdown-item" style="cursor:pointer">@user.DisplayName</a>
-                                                </li>
-                                            }
-                                        </ul>
-                                    </li>
-                                </ul>*@
+                            <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
+                                <li class="dropdown-submenu ">
+                                    <a id="dropdownSubMenu2" tabindex="-1" href="#" class="dropdown-item user dropdown-toggle">Switch User</a>
+                                    <ul id="ddwnSubMenu" style="left:-162px" aria-labelledby="dropdownSubMenu2" class="dropdown-menu border-0 shadow">
+                                        @for (int i = 0; i < userDetails.Count; i++)
+                                        {
+                                            <li>
+                                                <a onclick="switchUser('@userDetails[i].Email', this)" class="dropdown-item" style="cursor:pointer">@userDetails[i].DisplayName</a>
+                                            </li>
+                                        }
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </li>
@@ -287,7 +297,9 @@
             </div>
         </footer>
     </div>
-    <script type="text/javascript" src="~/js/Index.js"></script>
+    <script type="text/javascript" src="~/js/Index.js">
+        
+    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
