--- a/EmbededShell/EmbeddedbiShell/Views/Shared/_Layout.cshtml
+++ b/EmbededShell/EmbeddedbiShell/Views/Shared/_Layout.cshtml
@@ -49,9 +49,8 @@
         ddwnMenu = "collapse";
         ddwnIcon = "";
     }
-
-    }
-    @model SampleCoreApp.Models.SamplesTreeViewModel
+}
+@model SampleCoreApp.Models.SamplesTreeViewModel
     
 <!DOCTYPE html>
 <html>
@@ -59,47 +58,40 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     @*<title>@Model.Title</title>*@
-
-    <link rel="stylesheet" href="~/css/site.css">
-    <link rel="stylesheet" href="~/css/themes/all.css">
-
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-
-    <link rel="stylesheet" href="~/css/themes/tempusdominus-bootstrap-4.css">
-
-    <link rel="stylesheet" href="~/css/themes/icheck-bootstrap.css">
-
-    <link rel="stylesheet" href="~/css/themes/jqvmap.css">
-
-    <link rel="stylesheet" href="~/css/themes/adminlte.css">
-
-    <link rel="stylesheet" href="~/css/themes/OverlayScrollbars.css">
-
-    <link rel="stylesheet" href="~/css/themes/daterangepicker.css">
-
-    <link rel="stylesheet" href="~/css/themes/summernote-bs4.css">
+    
+    <link rel="stylesheet" href="~/css/bootstrapcompatibility.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/themes/all.css" />
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+    <link rel="stylesheet" href="~/css/themes/tempusdominus-bootstrap-4.css" />
+    <link rel="stylesheet" href="~/css/themes/icheck-bootstrap.css" />
+    <link rel="stylesheet" href="~/css/themes/jqvmap.css" />
+    <link rel="stylesheet" href="~/css/themes/adminlte.css" />
+    <link rel="stylesheet" href="~/css/themes/OverlayScrollbars.css" />
+    <link rel="stylesheet" href="~/css/themes/daterangepicker.css" />
+    <link rel="stylesheet" href="~/css/themes/summernote-bs4.css" />
 
 
-    <script src="~/js/jquery/jquery.min.js"></script>
-    <script src="~/js/jquery/jquery.easing.min.js"></script>
-    <script src="~/js/jquery/Jsrender.js"></script>
-    <script src="~/js/jquery/signalr.js"></script>
-    <script src="~/js/jquery-ui/jquery-ui.js"></script>
-    <script src="~/js/bootstrap/bootstrap.bundle.js"></script>
-    <script src="~/js/jqvmap/jquery.vmap.js"></script>
-    <script src="~/js/jqvmap/maps/jquery.vmap.usa.js"></script>
-    <script src="~/js/jquery-knob/jquery.knob.min.js"></script>
-    <script src="~/js/application/summernote-bs4.js"></script>
-    <script src="~/js/application/jquery.overlayScrollbars.js"></script>
-    <script src="~/js/application/adminlte.js"></script>
-    <script src="~/js/application/demo.js"></script>
-    <script src="~/js/jquery/embed-js.js"></script>
+    <script type="text/javascript" src="~/js/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="~/js/jquery/jquery.easing.min.js"></script>
+    <script type="text/javascript" src="~/js/jquery/Jsrender.js"></script>
+    <script type="text/javascript" src="~/js/jquery/signalr.js"></script>
+    <script type="text/javascript" src="~/js/jquery-ui/jquery-ui.js"></script>
+    <script type="text/javascript" src="~/js/bootstrap/bootstrap.bundle.js"></script>
+    <script type="text/javascript" src="~/js/jqvmap/jquery.vmap.js"></script>
+    <script type="text/javascript" src="~/js/jqvmap/maps/jquery.vmap.usa.js"></script>
+    <script type="text/javascript" src="~/js/jquery-knob/jquery.knob.min.js"></script>
+    <script type="text/javascript" src="~/js/application/summernote-bs4.js"></script>
+    <script type="text/javascript" src="~/js/application/jquery.overlayScrollbars.js"></script>
+    <script type="text/javascript" src="~/js/application/adminlte.js"></script>
+    <script type="text/javascript" src="~/js/application/demo.js"></script>
+    <script type="text/javascript" src="https://cdn.boldbi.com/embedded-sdk/latest/boldbi-embed.js"></script>
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     @*<script type="text/javascript" src="~/js/ej2.web.all.min.js"></script>*@
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-233131-36"></script>
+    <script type="text/javascript" async src="https://www.googletagmanager.com/gtag/js?id=UA-233131-36"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
@@ -136,10 +128,10 @@
                 </ul>*@
 
             <!-- SEARCH FORM -->
-            <form class="form-inline ml-3" action="/" method="post">
-                @Html.AntiForgeryToken()
+            <form class="form-inline ml-3" action="/" method="post" id="search-form">
+               @*@Html.AntiForgeryToken()*@
                 <div class="input-group input-group-sm">
-                    <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control form-control-navbar" type="search" id="Searchbox" placeholder="Search" aria-label="Search">
                     <div class="input-group-append">
                         <button class="btn btn-navbar" type="submit">
                             <i class="fas fa-search"></i>
@@ -300,6 +292,31 @@
     <script type="text/javascript" src="~/js/Index.js">
         
     </script>
+   @* <script>
+        document.getElementById("Searchbox").addEventListener("search",
+            function (event) {
+                if (event.type === "search") {
+                    if (event.currentTarget.value !== "") {
+                        const referringDomain = document.location.href; // Replace with your actual domain or a list of allowed domains
+                        const referrer = document.referrer;
+                        if (referrer.startsWith(referringDomain)) {
+                            // Proceed with the search functionality
+                            document.getElementById('Searchbox').value = "";
+                        } else {
+                            // Handle the invalid referrer, potentially indicating a CSRF attack
+                            document.getElementById('Searchbox').value = "";
+                        };
+                    } else {
+
+                        document.getElementById('Searchbox').value = "";
+                    }
+                }
+            });
+        document.getElementById("search-form").addEventListener("submit",
+            function (event) {
+                event.preventDefault(); // this line stops the default behavior of the form submission here
+            });
+    </script>*@
     @RenderSection("Scripts", required: false)
 </body>
 </html>
